Fix #67: Move all action buttons to be right-aligned.
Also removes some unnecessary positioning for the profile page 
navigation.

--- a/oneanddone/base/static/css/one-and-done.less
+++ b/oneanddone/base/static/css/one-and-done.less
@@ -134,20 +134,6 @@ footer {
         }
     }
 }
-.profile-navigation {
-    position: absolute;
-    bottom: 5%;
-    left: 1%;
-    ul {
-        margin: 0;
-        padding: 0;
-        list-style: none;
-        li {
-            display: inline;
-            margin-left: 5px;
-        }
-    }
-}
 .content-container {
     /* Fallback for browser that does not suport rgba. */
     background-color: rgb(255, 255, 255);
